--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,15 @@
             <artifactId>selenium-java</artifactId>
             <version>4.19.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.28</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-crypto</artifactId>
+            <version>1.1.0</version>
+        </dependency>
     </dependencies>
 </project>
