--- a/src/main/resources/credentials.yml
+++ b/src/main/resources/credentials.yml
@@ -1,6 +1,6 @@
-# For adding different credentials
+# For adding credentials
 # Add them below in username/password field
-# Run EncryptCredentials file
+# Run EncryptCredentials.java class
 # encrypted_credentials.dat should be updated
 username: username
 password: password
